5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1706_3056.log
== TEST (2019-04-29 18:19:10) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a[0, 1000]):
	print(a * 6 + 100)
elif(print("eu"))
-- ERROR:
File "XXXX", line 4
    elif(print("eu"))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:19:20) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a[0, 1000]):
	print(a * 6 + 100)
elif(print("eu")):
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:19:21) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a[0, 1000]):
	print(a * 6 + 100)
elif(print("eu")):
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:19:37) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a[0, 1000]):
	print(a * 6 + 100)
elif:
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:20:47) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a[0, 1000]):
	print(a * 6 + 100)
elif(a[1000, 20000]:
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a[1000, 20000]:
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:20:54) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a[0, 1000]):
	print(a * 6 + 100)
elif(a[1000, 20000])
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a[1000, 20000])
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:20:59) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a[0, 1000]):
	print(a * 6 + 100)
elif(a[1000, 20000]):
	print("eu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(a[0, 1000]):
TypeError: 'int' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:24:25) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a<=10000)
	print(round(a * 6 + 100)
elif(a==10000 or a<=20000)
	print("eu")
-- ERROR:
File "XXXX", line 2
    if(a<=10000)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:24:32) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a<=10000)
	print(round(a * 6 + 100)
elif(a==10000 or a<=20000)
	print("eu")
-- ERROR:
File "XXXX", line 2
    if(a<=10000)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:24:44) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a<=10000):
	print(round(a * 6 + 100)
elif(a==10000 or a<=20000):
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a==10000 or a<=20000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:24:54) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a<=10000):
	print(round(a * 6 + 100, 2)
elif(a==10000 or a<=20000):
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a==10000 or a<=20000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:25:13) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a<=10000):
	print(round(a * 6 + 100, 2)
elif(a==10000) r (<=20000):
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a==10000) r (<=20000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:25:21) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a<=10000):
	print(round(a * 6 + 100, 2)
elif(a==10000) or<=20000):
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a==10000) or<=20000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:26:03) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a<=10000):
	print(round(a * 6 + 100, 2)
elif(a==10000) or (a<=20000)
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a==10000) or (a<=20000)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:26:07) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a<=10000):
	print(round(a * 6 + 100, 2)
elif(a==10000) or (a<=20000):
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a==10000) or (a<=20000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:26:50) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a<=10000):
	print(round(a * 6 + 100, 2)
elif(a==10000) or (a<=20000):
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a==10000) or (a<=20000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:26:59) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a<=10000):
	print(round(a * 6 + 100, 2)
elif(a==10000)or(a<=20000):
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a==10000)or(a<=20000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:27:38) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a==0) or (a<=10000):
	print(round(a * 6 + 100, 2)
elif(a==10000)or(a<=20000):
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a==10000)or(a<=20000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:27:52) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a==0) or (a<=10000 not 0):
	print(round(a * 6 + 100, 2)
elif(a==10000)or(a<=20000):
	print("eu")
-- ERROR:
File "XXXX", line 2
    if(a==0) or (a<=10000 not 0):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:28:02) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a==0) or (a<=10000):
	print(round(a * 6 + 100, 2)
elif(a==10000)or(a<=20000):
	print("eu")
-- ERROR:
File "XXXX", line 4
    elif(a==10000)or(a<=20000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:28:09) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a==0) or (a<=10000):
	print(round(a * 6 + 100, 2)
elif(a==10000)or(a<=20000):
	print(1+1)
-- ERROR:
File "XXXX", line 4
    elif(a==10000)or(a<=20000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:28:34) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a==0) or (a<=10000):
	print(round(a * 6 + 100, 2)

-- ERROR:
File "XXXX", line 4
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:28:47) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a==0) or (a<=10000):
	print(round(a * 6 + 100, 2)
else:
	print(a)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:29:14) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a==0) or (a<=10000):
	print(round(a * 6 + 100, 2)
elif:
	print(a)
-- ERROR:
File "XXXX", line 4
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:29:40) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a==0) or (a<=10000):
	print(round(a * 6 + 100, 2)
elif(a==10000)or(a<=20000):
	print(1+1)
-- ERROR:
File "XXXX", line 4
    elif(a==10000)or(a<=20000):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:30:13) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a==0) or (a<=10000):
	print(round(a * 6 + 100, 2)

-- ERROR:
File "XXXX", line 4
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:30:31) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if(a==0) or (a<=10000):
	print(round(a * 6 + 100, 2)
else:
	print(1+1)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:30:55) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if((a==0) or (a<=10000)):
	print(round(a * 6 + 100, 2)
else:
	print(1+1)
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:31:17) 
-- CODE:
a=int(input("qual a area a ser fertilizada ? "))
if((a==0) or (a<=10000)):
	print(round(a * 6) + 100, 2)
else:
	print(1+1)
-- OUTPUT:
15508 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:33:22) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a==0) or (a<=10000)):
	print(round(a * 6) + 100, 2)
elif((a==10001) or (a<=20000))
	print(round(a * 6) + 100, 2)
-- ERROR:
File "XXXX", line 4
    elif((a==10001) or (a<=20000))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:33:27) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a==0) or (a<=10000)):
	print(round(a * 6) + 100, 2)
elif((a==10001) or (a<=20000)):
	print(round(a * 6) + 100, 2)
-- OUTPUT:
15508 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:33:43) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a==0) or (a<=10000)):
	print(round(a * 6) + 100,2)
elif((a==10001) or (a<=20000)):
	print(round(a * 6) + 100,2)
-- OUTPUT:
15508 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:33:57) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a==0) or (a<=10000)):
	print(round(a * 6) + 100,2)
elif((a==10001) or (a<=20000)):
	print(round(a * 6) + 100,2)
-- OUTPUT:
15508 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:38:58) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a>=0) or (a<=10000)):
	print(round(a * 6) + 100, 2)
elif((a>=10001) or (a<=20000)):
	print(round(a * 5.5) + 150, 2)
elif((a>=20001) or (a<=30000)):
	print(round(a * 5 ) + 200,  2)
elif((a>=30001))
	print(round(a * 4,5) + 250)


-- ERROR:
File "XXXX", line 8
    elif((a>=30001))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:39:03) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a>=0) or (a<=10000)):
	print(round(a * 6) + 100, 2)
elif((a>=10001) or (a<=20000)):
	print(round(a * 5.5) + 150, 2)
elif((a>=20001) or (a<=30000)):
	print(round(a * 5 ) + 200,  2)
elif((a>=30001)):
	print(round(a * 4,5) + 250)


-- OUTPUT:
15508 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:39:26) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a>=0) or (a<=10000)):
	print(round(a * 6) + 100, 2)
elif((a>=10001) or (a<=20000)):
	print(round(a * 5.5) + 150, 2)
elif((a>=20001) or (a<=30000)):
	print(round(a * 5 ) + 200,  2)
elif((a>=30001)):
	print(round(a * 4,5) + 250)


-- OUTPUT:
15508 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:40:14) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a>=0) or (a<=10000)):
	print(round(a * 6) + 100, 2)
elif((a>=10001) or (a<=20000)):
	print(round(a * 5.5) + 150, 2)
elif((a>=20001) or (a<=30000)):
	print(round(a * 5 ) + 200,  2)
elif((a>=30001)):
	print(round(a * 4,5) + 250)


-- EXECUTION TIME:
0.154563
-- TEST CASE 1:
---- input:
2568
---- correct output:
15508.0
---- user output:
15508 2
-- TEST CASE 2:
---- input:
11
---- correct output:
166.0
---- user output:
166 2
-- TEST CASE 3:
---- input:
9638
---- correct output:
57928.0
---- user output:
57928 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:20) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a>=0) or (a<=10000)):
	print(round(a * 6 + 100, 2))
elif((a>=10001) or (a<=20000)):
	print(round(a * 5.5 + 150, 2))
elif((a>=20001) or (a<=30000)):
	print(round(a * 5 + 200,  2)
elif((a>=30001)):
	print(round(a * 4,5 + 250, 2)


-- ERROR:
File "XXXX", line 8
    elif((a>=30001)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:33) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a>=0) or (a<=10000)):
	print(round(a * 6 + 100, 2))
elif((a>=10001) or (a<=20000)):
	print(round(a * 5.5 + 150, 2))
elif((a>=20001) or (a<=30000)):
	print(round(a * 5 + 200,  2)
elif(a>=30001):
	print(round(a * 4,5 + 250, 2)


-- ERROR:
File "XXXX", line 8
    elif(a>=30001):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:46) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a>=0) or (a<=10000)):
	print(round(a * 6 + 100, 2))
elif((a>=10001) or (a<=20000)):
	print(round(a * 5.5 + 150, 2))
elif((a>=20001) or (a<=30000)):
	print(round(a * 5 + 200, 2)
elif(a>=30001):
	print(round(a * 4,5 + 250, 2)


-- ERROR:
File "XXXX", line 8
    elif(a>=30001):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:54) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a>=0) or (a<=10000)):
	print(round(a * 6 + 100, 2))
elif((a>=10001) or (a<=20000)):
	print(round(a * 5.5 + 150, 2))
elif((a>=20001) or (a<=30000)):
	print(round(a * 5 + 200, 2))
elif(a>=30001):
	print(round(a * 4,5 + 250, 2)


-- ERROR:
File "XXXX", line 11
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:42:13) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a>=0) or (a<=10000)):
	print(round(a * 6 + 100, 2))
elif((a>=10001) or (a<=20000)):
	print(round(a * 5.5 + 150, 2))
elif((a>=20001) or (a<=30000)):
	print(round(a * 5 + 200, 2))
elif(a>=30001):
	print(round(a * 4,5 + 250, 2))


-- OUTPUT:
15508.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:42:25) 
-- CODE:
a=float(input("qual a area a ser fertilizada ? "))
if((a>=0) or (a<=10000)):
	print(round(a * 6 + 100, 2))
elif((a>=10001) or (a<=20000)):
	print(round(a * 5.5 + 150, 2))
elif((a>=20001) or (a<=30000)):
	print(round(a * 5 + 200, 2))
elif(a>=30001):
	print(round(a * 4,5 + 250, 2))


-- EXECUTION TIME:
0.20704
-- TEST CASE 1:
---- input:
2568
---- correct output:
15508.0
---- user output:
15508.0
-- TEST CASE 2:
---- input:
11
---- correct output:
166.0
---- user output:
166.0
-- TEST CASE 3:
---- input:
9638
---- correct output:
57928.0
---- user output:
57928.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
